--- a/src/main/resources/SystemGlobals.properties
+++ b/src/main/resources/SystemGlobals.properties
@@ -1,10 +1,10 @@
 anlong.im.file.base.path.amount=3
-anlong.im.file.base.path.linux.1=/data/anlong/first/msgfileserver/DownloadServlet
-anlong.im.file.base.path.linux.2=/data/anlong/second/msgfileserver/DownloadServlet
-anlong.im.file.base.path.linux.3=/data/anlong/third/msgfileserver/DownloadServlet
-anlong.im.file.base.path.windows.1=D:\\anlong\\first\\msgfileserver\\DownloadServlet
-anlong.im.file.base.path.windows.2=D:\\anlong\\second\\msgfileserver\\DownloadServlet
-anlong.im.file.base.path.windows.3=D:\\anlong\\third\\msgfileserver\\DownloadServlet
+anlong.im.file.base.path.linux.1=/data/anlong/first/fileserver/DownloadServlet
+anlong.im.file.base.path.linux.2=/data/anlong/second/fileserver/DownloadServlet
+anlong.im.file.base.path.linux.3=/data/anlong/third/fileserver/DownloadServlet
+anlong.im.file.base.path.windows.1=D:\\anlong\\first\\fileserver\\DownloadServlet
+anlong.im.file.base.path.windows.2=D:\\anlong\\second\\fileserver\\DownloadServlet
+anlong.im.file.base.path.windows.3=D:\\anlong\\third\\fileserver\\DownloadServlet
 anlong.im.file.catalog.prefix=mcdownload
 #
 anlong.im.file.name.type10=personal-chat-pic
@@ -24,7 +24,7 @@ anlong.im.file.name.type61=app-icon
 #Is active mongoDB  1.true  0.false
 anlong.nosql.mongoDB.address=127.0.0.1
 anlong.nosql.mongoDB.port=27017
-anlong.nosql.mongoDB.dbname=msgfileserver
+anlong.nosql.mongoDB.dbname=fileserver
 
 #mina socket 
 anlong.im.file.socket.port=8781
