--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-LOG_DIR=/usr/local/app/tomcat_fileServer/apache-tomcat-6.0.29/logs/fileserver_LogFile/
+LOG_DIR=${catalina.base}
 log4j.rootLogger=info,console,default
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
